<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="ExtrusionData" Id="{367ca7b9-1246-46ec-b5c0-6c54f2fc7615}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
	extrusionWeight : REAL;
	
	extrusionHeight : REAL;
	extrusionWidth : REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>